Fixed the Actions column alignment and made the search functionality working in DocumentCategory component

--- a/src/app/documentManager/document/documentCategory/documentCategory.component.css
+++ b/src/app/documentManager/document/documentCategory/documentCategory.component.css
@@ -9,3 +9,7 @@
 .text-gray {
   color: gray;
 }
+
+.text-right {
+  text-align: right;
+}
